--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -20,8 +20,8 @@ model:
 # Where should the resolver implementations go?
 resolver:
   layout: follow-schema
-  dir: graph
-  package: graph
+  dir: resolver
+  package: resolver
 
 # Optional: turn on use `gqlgen:"fieldName"` tags in your models
 # struct_tag: json
@@ -35,7 +35,7 @@ resolver:
 # gqlgen will search for any type names in the schema in these go packages
 # if they match it will use them, otherwise it will generate them.
 autobind:
-  - "example.com/server-go/graph/model"
+  - 'example.com/server-go/graph/model'
 
 # This section declares type mapping between the GraphQL and go type systems
 #
